unpackaged/main/default/objects/Account/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Статус организации</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Не было контакта</fullName>
                <color>#FF6666</color>
                <default>true</default>
                <label>Не было контакта</label>
            </value>
            <value>
                <fullName>Первый контакт</fullName>
            </value>
            <value>
                <fullName>Первая сделка</fullName>
            </value>
            <value>
                <fullName>Постоянный клиент</fullName>
                <color>#FFCC33</color>
                <label>Постоянный клиент</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>