unpackaged/main/default/objects/Account/fields/add_phones__c.field-meta.xml
<CustomField>
    <fullName>add_phones__c</fullName>
    <description>Дополнительные телефоны</description>
    <inlineHelpText>Дополнительные телефоны</inlineHelpText>
    <label>Дополнительные телефоны</label>
    <length>255</length>
    <type>Text</type>
</CustomField>