unpackaged/main/default/objects/Account/fields/BIK__c.field-meta.xml
<CustomField>
    <fullName>BIK__c</fullName>
    <label>БИК</label>
    <length>32</length>
    <type>Text</type>
</CustomField>