unpackaged/main/default/objects/Account/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>Страна (юридическая)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Россия</fullName>
            </value>
            <value>
                <fullName>Беларусь</fullName>
            </value>
            <value>
                <fullName>Казахстан</fullName>
            </value>
            <value>
                <fullName>Украина</fullName>
            </value>
            <value>
                <fullName>Словакия</fullName>
            </value>
            <value>
                <fullName>Литва</fullName>
            </value>
            <value>
                <fullName>Монголия</fullName>
            </value>
            <value>
                <fullName>Австрия</fullName>
            </value>
            <value>
                <fullName>Абхазия</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>