unpackaged/main/default/objects/Account/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <label>Юридическое имя организации</label>
    <length>255</length>
    <type>Text</type>
</CustomField>