unpackaged/main/default/objects/Account/fields/BillingPostIndex__c.field-meta.xml
<CustomField>
    <fullName>BillingPostIndex__c</fullName>
    <label>Почтовый индекс (юридический)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>