unpackaged/main/default/objects/Account/fields/BillingRegion__c.field-meta.xml
<CustomField>
    <fullName>BillingRegion__c</fullName>
    <label>Область/Регион (юридическая)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BillingCountry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Республика Адыгея</fullName>
            </value>
            <value>
                <fullName>Республика Алтай</fullName>
            </value>
            <value>
                <fullName>Республика Башкортостан</fullName>
            </value>
            <value>
                <fullName>Республика Бурятия</fullName>
            </value>
            <value>
                <fullName>Республика Дагестан</fullName>
            </value>
            <value>
                <fullName>Республика Ингушетия</fullName>
            </value>
            <value>
                <fullName>Республика Кабардино-Балкарская</fullName>
            </value>
            <value>
                <fullName>Республика Калмыкия</fullName>
            </value>
            <value>
                <fullName>Республика Карачаево-Черкесская</fullName>
            </value>
            <value>
                <fullName>Республика Карелия</fullName>
            </value>
            <value>
                <fullName>Республика Коми</fullName>
            </value>
            <value>
                <fullName>Республика Марий Эл</fullName>
            </value>
            <value>
                <fullName>Республика Мордовия</fullName>
            </value>
            <value>
                <fullName>Республика Саха (Якутия)</fullName>
            </value>
            <value>
                <fullName>Республика Северная Осетия — Алания</fullName>
            </value>
            <value>
                <fullName>Республика Татарстан</fullName>
            </value>
            <value>
                <fullName>Республика Тыва (Тува)</fullName>
            </value>
            <value>
                <fullName>Республика Удмуртская</fullName>
            </value>
            <value>
                <fullName>Республика Хакасия</fullName>
            </value>
            <value>
                <fullName>Республика Чеченская</fullName>
            </value>
            <value>
                <fullName>Республика Чувашская</fullName>
            </value>
            <value>
                <fullName>Алтайский край</fullName>
            </value>
            <value>
                <fullName>Забайкальский край</fullName>
            </value>
            <value>
                <fullName>Камчатский край</fullName>
            </value>
            <value>
                <fullName>Краснодарский край</fullName>
            </value>
            <value>
                <fullName>Красноярский край</fullName>
            </value>
            <value>
                <fullName>Пермский край</fullName>
            </value>
            <value>
                <fullName>Приморский край</fullName>
            </value>
            <value>
                <fullName>Ставропольский край</fullName>
            </value>
            <value>
                <fullName>Хабаровский край</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>