unpackaged/main/default/objects/Account/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Улица, дом (юридические)</label>
    <type>TextArea</type>
</CustomField>