unpackaged/main/default/objects/Account/fields/CorrespondentAccount__c.field-meta.xml
<CustomField>
    <fullName>CorrespondentAccount__c</fullName>
    <label>К/с банка</label>
    <length>32</length>
    <type>Text</type>
</CustomField>