unpackaged/main/default/objects/Account/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Скидка</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>