unpackaged/main/default/objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <inlineHelpText>К какому отделу относится данный контрагент.</inlineHelpText>
    <label>Отдел</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Чистые помещения</fullName>
            </value>
            <value>
                <fullName>Приток</fullName>
            </value>
            <value>
                <fullName>HoReCa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>