unpackaged/main/default/objects/Account/fields/HiddenRegionFieldForSearch__c.field-meta.xml
<CustomField>
    <fullName>HiddenRegionFieldForSearch__c</fullName>
    <externalId>true</externalId>
    <label>Область/регион (поиск,скрыто)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>