unpackaged/main/default/objects/Account/fields/IdFrom1C__c.field-meta.xml
<CustomField>
    <fullName>IdFrom1C__c</fullName>
    <label>Идентификатор в 1С</label>
    <length>32</length>
    <type>Text</type>
</CustomField>