unpackaged/main/default/objects/Account/fields/OrganisationCurrentAccount__c.field-meta.xml
<CustomField>
    <fullName>OrganisationCurrentAccount__c</fullName>
    <label>Рассчетный счет</label>
    <length>32</length>
    <type>Text</type>
</CustomField>