unpackaged/main/default/objects/Account/fields/OrganisationINN__c.field-meta.xml
<CustomField>
    <fullName>OrganisationINN__c</fullName>
    <label>ИНН</label>
    <length>32</length>
    <type>Text</type>
</CustomField>