unpackaged/main/default/objects/Account/fields/OrganisationKPP__c.field-meta.xml
<CustomField>
    <fullName>OrganisationKPP__c</fullName>
    <label>КПП</label>
    <length>32</length>
    <type>Text</type>
</CustomField>