unpackaged/main/default/objects/Account/fields/OrganisationOGRN__c.field-meta.xml
<CustomField>
    <fullName>OrganisationOGRN__c</fullName>
    <label>ОГРН</label>
    <length>32</length>
    <type>Text</type>
</CustomField>