unpackaged/main/default/objects/Account/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>Город (фактический)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>