unpackaged/main/default/objects/Account/fields/ShippingPostIndex__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostIndex__c</fullName>
    <label>Почтовый индекс (фактический)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>