unpackaged/main/default/objects/Account/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <label>Улица, дом (фактические)</label>
    <type>TextArea</type>
</CustomField>