unpackaged/main/default/objects/Account/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Организацию</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Организации</relationshipLabel>
    <relationshipName>mDVt</relationshipName>
    <type>Lookup</type>
</CustomField>