unpackaged/main/default/objects/Account/listViews/HoReCa.listView-meta.xml
<ListView>
    <fullName>HoReCa</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field1__c</field>
        <operation>equals</operation>
        <value>HoReCa</value>
    </filters>
    <label>Организации HoReCa</label>
    <language>ru</language>
</ListView>