unpackaged/main/default/objects/Account/listViews/HoReCaDilers.listView-meta.xml
<ListView>
    <fullName>HoReCaDilers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ShippingRegion__c</columns>
    <columns>Activity__c</columns>
    <columns>Field1__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field1__c</field>
        <operation>equals</operation>
        <value>HoReCa</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Дилер</value>
    </filters>
    <label>Дилеры HoReCa</label>
    <language>ru</language>
</ListView>