unpackaged/main/default/objects/Account/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ShippingRegion__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Activity__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Новое на этой неделе</label>
    <language>ru</language>
</ListView>