unpackaged/main/default/objects/Account/listViews/Pritok.listView-meta.xml
<ListView>
    <fullName>Pritok</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ShippingRegion__c</columns>
    <columns>Activity__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field1__c</field>
        <operation>equals</operation>
        <value>Приток</value>
    </filters>
    <label>Организации Приток</label>
    <language>ru</language>
</ListView>