unpackaged/main/default/objects/Account/listViews/Viewalldilers.listView-meta.xml
<ListView>
    <fullName>Viewalldilers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>Activity__c</columns>
    <columns>Field1__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Дилер</value>
    </filters>
    <label>Дилеры Все</label>
    <language>ru</language>
</ListView>