unpackaged/main/default/objects/Account/listViews/ViewCHP.listView-meta.xml
<ListView>
    <fullName>ViewCHP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ShippingRegion__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field1__c</field>
        <operation>equals</operation>
        <value>Чистые помещения</value>
    </filters>
    <label>Организации ЧП</label>
    <language>ru</language>
</ListView>