unpackaged/main/default/objects/Account/listViews/ViewDilersCHP.listView-meta.xml
<ListView>
    <fullName>ViewDilersCHP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ShippingRegion__c</columns>
    <columns>Activity__c</columns>
    <columns>Field1__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Дилер</value>
    </filters>
    <filters>
        <field>Field1__c</field>
        <operation>equals</operation>
        <value>Чистые помещения</value>
    </filters>
    <label>Дилеры ЧП</label>
    <language>ru</language>
</ListView>