unpackaged/main/default/objects/Account/listViews/ViewEfremov.listView-meta.xml
<ListView>
    <fullName>ViewEfremov</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Activity__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ShippingRegion__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserTION__c</field>
        <operation>equals</operation>
        <value>Андрей Ефремов</value>
    </filters>
    <label>Дилеры А.Ефремова</label>
    <language>ru</language>
</ListView>