unpackaged/main/default/objects/Account/listViews/ViewIntelmed.listView-meta.xml
<ListView>
    <fullName>ViewIntelmed</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Activity__c</columns>
    <columns>Comment__c</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ShippingRegion__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Дилер Интелмеда</value>
    </filters>
    <label>Дилеры Интелмеда</label>
    <language>ru</language>
</ListView>