unpackaged/main/default/objects/Account/listViews/ViewMoscow1.listView-meta.xml
<ListView>
    <fullName>ViewMoscow1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Comment__c</columns>
    <columns>Activity__c</columns>
    <columns>ShippingRegion__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Проектировщик</value>
    </filters>
    <filters>
        <field>ShippingRegion__c</field>
        <operation>equals</operation>
        <value>Москва</value>
    </filters>
    <label>Проектные организации Москвы</label>
    <language>ru</language>
</ListView>